# computer

./: .gitmodules  README.md  alu_eeprom.ino  alu_opcodes.txt  eeprom_programming.ino  notes.txt
arduino_sketches/eeprom_programming/: alu_eeprom.h  control_unit_eeprom_a1.h  control_unit_eeprom_a2.h  control_unit_eeprom_b1.h  control_unit_eeprom_b2.h  control_unit_eeprom_c1.h  control_unit_eeprom_c2.h  control_unit_eeprom_d1.h  control_unit_eeprom_d2.h  control_unit_eeprom_e1.h  control_unit_eeprom_e2.h  defines.h  eeprom_programming.ino
arduino_sketches/eeprom_programming/decode/: eeprom_a1.h  eeprom_b1.h  eeprom_c1.h  eeprom_d1.h  eeprom_e1.h
arduino_sketches/eeprom_programming/fetch/: eeprom_a.h  eeprom_b.h  eeprom_c.h  eeprom_d.h  eeprom_e.h
arduino_sketches/eeprom_programming/manual_access/: eeprom_a1.h  eeprom_a2.h  eeprom_a3.h  eeprom_a4.h  eeprom_b1.h  eeprom_b2.h  eeprom_b3.h  eeprom_b4.h  eeprom_c1.h  eeprom_c2.h  eeprom_c3.h  eeprom_c4.h  eeprom_d1.h  eeprom_d2.h  eeprom_d3.h  eeprom_d4.h  eeprom_e1.h  eeprom_e2.h  eeprom_e3.h  eeprom_e4.h
arduino_sketches/memory_writing/: defines.h  regs_move.h
bus_control/: main.py
bus_control/memory_writing/: defines.h  memory_writing.ino
config/: alu.json  alu_scheme.json  instructions.json  instructions_scheme.json  microcodes.json  microcodes_scheme.json  signals.json
eeproms-design/: dump_eeproms.py  generate-alu-config.py  generate_instructions_config.py  generate_microcodes_config.py  main_programmer.py  main_validator.py  main_visualizer.py
eeproms-design/arduino/eeprom_programming/: eeprom_programming.ino
eeproms-design/eeproms/: alu_eeprom.py  boot_eeprom.py  config.py  control_unit_eeproms.py  eeprom.py  identity_eeprom.py  interrupts_eeprom.py
eeproms-design/summaries/: decoder-a-summary.txt  decoder-b-summary.txt  decoder-c-summary.txt  decoder-d-summary.txt  decoder-e-summary.txt  decoder-f-summary.txt  identity-summary.txt
eeproms-design/visualisations/: HALT.html  MOVAB.html  MOVAIMM-MOVBA-MOVBIMM-MOVAB-MOVBIMM.html
eeproms_design/: alu-logic-scheme.json  alu-logic.json  alu-summary.txt  alu_logic_eeprom.py  auxiliary-instructions.json  control-unit-summary.txt  control_unit_eeproms.py  decoder-c-summary.txt  decoder-d-summary.txt  decoder-f-summary.txt  eeprom.py  instructions-opcodes.json  instructions.json  main.py  microcodes.json  signals-identifiers.json  signals-scheme.json  signals-visualizer.py  tool.py  validate-alu-codes.py  validate-instructions.py  validate-microsteps.py
eeproms_design/eeprom_programming/: defines.h  eeprom_programming.ino
eeproms_design/instructions_visualisations/: MOVAB.html  MOVABSIMM.html  MOVAIMM-MOVBA-MOVBIMM-MOVAB-MOVBIMM.html  MOVAIMM-MOVBIMM-ADDA-ADDB.html
eeproms_design/summaries/: decoder-a-summary.txt  decoder-b-summary.txt  decoder-d-summary.txt  decoder-e-summary.txt
external_control/: main.py
external_control/arduino/: cpu_control.ino
external_control/cpu_control/: cpu_control.ino  defines.h
logisim/: pcv1.circ
manual/: main.tex
memory_writing/: mem_move.h  memory_writing.ino
notes/: .gitignore  Komputer.ods
schematics/: schematics.kicad_pro  schematics.kicad_sch  sn74hct245n.kicad_sym  sn74hct377n.kicad_sym  sym-lib-table
schematics/additional-libraries/: bb-logo.kicad_mod
schematics/arithmetic-logic-unit/: arithmetic-logic-unit.kicad_prl  arithmetic-logic-unit.kicad_pro  arithmetic-logic-unit.kicad_sch
schematics/clock-unit/: clock-unit.kicad_prl  clock-unit.kicad_pro
schematics/control-unit/: control-unit.kicad_prl  control-unit.kicad_pro  control-unit.kicad_sch
schematics/external-libraries/2023-04-09_19-07-46/: 2023-04-09_19-07-46.kicad_sym  2023-04-09_19-07-46.lib
schematics/external-libraries/AS6C1008-55PCN/: AS6C1008-55PCN.lib  AS6C1008-55PCN.mod
schematics/final-alu/: bom.txt  final-alu.kicad_pcb  final-alu.kicad_pro  final-alu.kicad_sch  schematic-positions-to-layout.debug
schematics/final-alu/alu-gerber/: final-alu-B_Cu.gbr  final-alu-B_Mask.gbr  final-alu-B_Paste.gbr  final-alu-B_Silkscreen.gbr  final-alu-Edge_Cuts.gbr  final-alu-F_Cu.gbr  final-alu-F_Mask.gbr  final-alu-F_Paste.gbr  final-alu-F_Silkscreen.gbr  final-alu-NPTH.drl  final-alu-PTH.drl
schematics/final-cu/: final-cu.kicad_pcb  final-cu.kicad_pro  final-cu.kicad_sch  fp-lib-table
schematics/final-cu/cu-gerber/: final-cu-B_Cu.gbr  final-cu-B_Mask.gbr  final-cu-B_Paste.gbr  final-cu-B_Silkscreen.gbr  final-cu-Edge_Cuts.gbr  final-cu-F_Cu.gbr  (+5 more)
schematics/final-memory/: final-memory.kicad_pcb  final-memory.kicad_pro  final-memory.kicad_sch
schematics/memory-unit/: memory-unit.kicad_prl  memory-unit.kicad_pro  memory-unit.kicad_sch
schematics/program-counter/: program-counter.kicad_pcb  program-counter.kicad_prl  program-counter.kicad_pro  program-counter.kicad_sch
schematics/registers/: registers.kicad_prl  registers.kicad_pro  registers.kicad_sch  ~registers.kicad_sch.lck
schematics/stack-counter/: stack-counter.kicad_prl  stack-counter.kicad_pro  stack-counter.kicad_sch
verilog/: .clang-format  .gitignore  CMakeLists.txt  TODO.md
verilog-project/testbenches/: ALU_tb.cpp  CMakeLists.txt
verilog/examples/: CMakeLists.txt  test1.cpp
verilog/resources/: roms
verilog/simulator/: CMakeLists.txt  main.cpp  ps2.cpp  ps2.hpp  ps2Lookup.hpp
verilog/src/: CMakeLists.txt  alu.v  signals.v
verilog/src/adapters/: cpu_adapter.sv  mem_unit_adapter.sv  ram_adapter.sv  tmp_adapter.sv
verilog/src/basics/: counter.v  ram.sv  register.v  shift_reg.sv  sr_latch.sv  tristate_buffer.v
verilog/src/cpu/: alu.sv  alu.v  control_unit.v  cpu.v  mem_unit.sv  ram.v  tmp.sv
verilog/src/gpu/: gpu.sv  modcounter.sv  modcounter_test_wrapper.sv
verilog/src/include/: signals.v
verilog/testbenches/: CMakeLists.txt
verilog/tests/: ALU_test.cpp  CMakeLists.txt  alu_test.cpp  control_unit_test.cpp  counter_test.cpp  cpu_test.cpp  mem_unit_test.cpp  modcounter_test.cpp  ram_test.cpp  register_test.cpp  shift_reg_test.cpp  tests_common.hpp  tmp_test.cpp  tristate_buffer_test.cpp
verilog/tools/: bytes_to_bmp.py  font_to_bin.py  fontbytes
(+518 files in other folders)
