find_package(verilator HINTS $ENV{VERILATOR_ROOT})
if (NOT verilator_FOUND)
    message(FATAL_ERROR "Verilator not found")
endif()

function(add_verilator_test TEST_NAME LIBRARIES)
    add_executable(${TEST_NAME} ${TEST_NAME}.cpp)
    target_link_libraries(${TEST_NAME} Doctest ${LIBRARIES})
    add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
endfunction()

add_verilator_test(tristate_buffer_test TRISTATE_BUFFER)
add_verilator_test(register_test REGISTER)
# add_verilator_test(ram_test RAM)
add_verilator_test(alu_test ALU)
